# spectral-proof-of-RH

./: .gitignore  .gitmessage  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER_ONBOARDING.md  LICENSE  LICENSE-TEXT  Makefile  README.md  bourbaki.toml  ci.yml  dag.txt  lake-manifest.json  lakefile.lean  lakefile.olean  lean_todo.md  pyproject.toml  report.md
.github/: CODEOWNERS
.lake/: lakefile.olean  lakefile.olean.trace
bourbaki_snapshot/: Cargo.toml
crates/snapshot/: Cargo.toml
crates/snapshot/src/: lib.rs
dag/: dag.dot  dag_edges.json  dag_nodes.json
docs/: DAG_TOUR.md  README.md  index.md  snapshot.md
githooks/: pre-commit
lean/: README.md  SpectralProof.lean  build.sh  lake-manifest.json  lakefile.lean
metadata/: chapter_summary.json  labels.csv
scripts/: analyze_dot.py  bump_version.py  check_latex_log.py  check_modifications.py  check_proofs.py  check_structure.py  dag_visualizer.py  deploy_pdf.py  docs_lint.py  generate_chapter_summary.py  generate_dag.py  generate_index.py  generate_labels_csv.py  linearize_to_single_tex.sh  lint_ref_macros.py  lint_tex_log.py  requirements.txt  sync_labels_and_inputs.py  validate_labels.py
src/: B_dependency_graph.tex  C_functorial_extensions.tex  D_heat_kernel_construction.tex  F_spectral_numerics.tex  G_additional_structures.tex  I_trace_ideals_review.tex  J_reductions_and_conventions.tex  K_spectral_physics_link.tex  README.md  arxiv_submission_readme.txt  main.rpi  main.tex  preamble.tex  references.bib
tests/: README.md  check_all_proofs_extracted.py  check_compile_latexmk.py  check_lean_links.py  (+14 more)
(+469 files in other folders)
