[package]
name = "snapshot"
version = "0.1.0"
edition = "2021"

[dependencies]
tar = "0.4"
zstd = "0.11"
sha2 = "0.10"
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
